# SNBot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
include/: Bot.h  CApplication.h  CBotManager.h  CCommandHandler.h  CDatabase.h  CLanguage.h  CLoader.h  CLogger.h  CPhpHelper.h  DBAgent.h  GameInfo.h  Loader.h  bot_info.h  bot_names.h  enums.h  globals.h  logger.h  table_config.h  table_fleets.h  table_planets.h  table_users.h  table_vars.h  types.h  vars.h
language/: lang_tr.toml
src/: Bot.cpp  CApplication.cpp  CBotManager.cpp  CCommandHandler.cpp  CDatabase.cpp  CHandleBuildings.cpp  CHandleColonization.cpp  CHandleConsoleCommand.cpp  CHandleResearches.cpp  CHandleResourceUpdate.cpp  CLanguage.cpp  CLoader.cpp  CLogger.cpp  CPhpHelper.cpp  DBAgent.cpp  GameInfo.cpp  Loader.cpp  logger.cpp  main.cpp
